# rvstd-signal

./: .clang-format  .clang-tidy  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake.yml  docker-image.yml
benchmark/catch2/: CMakeLists.txt  bool_and_vec_skip_line_bm.cpp  bool_and_vec_sweep_line_bm.cpp  boost_icl_bm.cpp  boost_icl_test.cpp  catch_reporter_csv.hpp  forward_signal_bool_bm.cpp  vec_of_pairs_bm.cpp  vec_of_pairs_sweep_line_bm.cpp
benchmark/google/: boost_icl.test.cpp
examples/: IntervalSetOps.cpp
include/rvstd/: interval_set.hpp
include/rvstd/bool_and_vec/: interval_set.hpp  interval_set_skip_line.hpp  interval_set_swap_line.hpp  interval_set_sweep_line.hpp
include/rvstd/forward_signal_bool/: boolean_operations.hpp  forward_signal.hpp
include/rvstd/two_vecs/: interval_set.hpp
include/rvstd/vec_of_pairs/: interval_map.hpp  interval_map_sweep_line.hpp  interval_set.hpp
src/: main.cpp
src/rvstd/forward_signal_bool/: forward_signal.cpp
tests/: CMakeLists.txt  bool_and_vec.cpp  bool_and_vec_skip_line.cpp  bool_and_vec_swap_line.cpp  bool_and_vec_sweep_line.cpp  two_vecs.cpp  vec_of_pairs.cpp
tests/forward_signal/: test_forward_signal_bool.cpp
tests/interval_map/: vec_of_pairs_sweep_line.cpp
